--- a/HTML/questionnaire/question.html
+++ b/HTML/questionnaire/question.html
@@ -17,7 +17,7 @@
             题
         </div>
         <div class="bar">
-            <div class="bar-progess"></div>
+            <div class="bar-process"></div>
         </div>
         </div>
         <div class="main">
